UI updates, add randomizer

--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
           <input type="text" class="form-control" ng-model="query" />
           <button ng-click="getWiki()" class="form-control btn btn-primary">Search</button>
           <button id = "randomBtn" class="form-control btn" 
-            style="cursor:pointer" ng-click="randomize">
+             ng-click="randomize()">
             Random
           </button>
         </div>
