--- a/client/index.html
+++ b/client/index.html
@@ -23,15 +23,22 @@
              ng-click="randomize()">
             Random
           </button>
+          <div>
+            <ul class="list-group">
+              <li class="list-group-item" ng-repeat="link in links">
+              <a ng-href="{{link.url}}">{{link.title}}</a>    
+          </li>  
+        </ul>
+          </div>
         </div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <ul class="list-group">
           <li class="list-group-item" ng-repeat="link in links">
             <a ng-href="{{link.url}}">{{link.title}}</a>    
           </li>  
         </ul>  
-      </div> 
+      </div>  -->
     </center>
   </body>
 </html>
